; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_aw_mmc.c_aw_mmc_release_host.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/allwinner/extr_aw_mmc.c_aw_mmc_release_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.aw_mmc_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @aw_mmc_release_host to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @aw_mmc_release_host(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.aw_mmc_softc*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.aw_mmc_softc* @device_get_softc(i32 %6)
  store %struct.aw_mmc_softc* %7, %struct.aw_mmc_softc** %5, align 8
  %8 = load %struct.aw_mmc_softc*, %struct.aw_mmc_softc** %5, align 8
  %9 = call i32 @AW_MMC_LOCK(%struct.aw_mmc_softc* %8)
  %10 = load %struct.aw_mmc_softc*, %struct.aw_mmc_softc** %5, align 8
  %11 = getelementptr inbounds %struct.aw_mmc_softc, %struct.aw_mmc_softc* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = add nsw i32 %12, -1
  store i32 %13, i32* %11, align 4
  %14 = load %struct.aw_mmc_softc*, %struct.aw_mmc_softc** %5, align 8
  %15 = call i32 @wakeup(%struct.aw_mmc_softc* %14)
  %16 = load %struct.aw_mmc_softc*, %struct.aw_mmc_softc** %5, align 8
  %17 = call i32 @AW_MMC_UNLOCK(%struct.aw_mmc_softc* %16)
  ret i32 0
}

declare dso_local %struct.aw_mmc_softc* @device_get_softc(i32) #1

declare dso_local i32 @AW_MMC_LOCK(%struct.aw_mmc_softc*) #1

declare dso_local i32 @wakeup(%struct.aw_mmc_softc*) #1

declare dso_local i32 @AW_MMC_UNLOCK(%struct.aw_mmc_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
